- Merging issues fixed: fixed broken css

--- a/app/styles/components/student/class/_gru-study-navbar.scss
+++ b/app/styles/components/student/class/_gru-study-navbar.scss
@@ -53,7 +53,7 @@
       display: grid;
       box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
       /*Default View */
-      grid-template-columns: 59px 170px 145px 1fr 59px 59px 59px;
+      grid-template-columns: 59px 170px 145px 145px 1fr 59px 59px 59px;
 
       .tab {
         &:hover {
@@ -254,7 +254,7 @@
       }
       /* Large devices (laptops/desktops, 992px and up) */
       @media only screen and (min-width: 992px) {
-        grid-template-columns: 59px 170px 145px 1fr 59px 59px 59px;
+        grid-template-columns: 59px 170px 145px 145px 1fr 59px 59px 59px;
 
         .class-activities,
         .course-map.study-player,
